[project]
name = "koneko"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rychanya", email = "rychanya@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
