[project]
name = "koneko"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rychanya", email = "rychanya@gmail.com"},
]
dependencies = [
    "uvicorn>=0.30.1",
    "blacksheep>=2.0.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
    "httpx-sse>=0.4.0",
    "anyio>=4.4.0",
    "httpx>=0.27.0",
]
dev = [
    "ruff>=0.4.9",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
